--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "purescript-express-passport",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aykl/purescript-express-passport.git"
-  },
+  //"repository": {
+  //  "type": "git",
+  //  "url": "git://github.com/aykl/purescript-express-passport.git"
+  //},
   "ignore": [
     "**/.*",
     "node_modules",
@@ -14,15 +14,12 @@
     "bower.json"
   ],
   "dependencies": {
-    "purescript-prelude": "^3.0.0",
-    "purescript-exceptions": "^3.0.0",
-    "purescript-argonaut": "^3.0.0",
-    "purescript-foreign": "^4.0.0",
-    "purescript-nullable": "^3.0.0",
-    "purescript-express": "^0.5.0"
+    "purescript-argonaut": "^5.0.0",
+    "purescript-effect": "^2.0.0",
+    "purescript-express": "^0.7.0"
   },
   "devDependencies": {
-    "purescript-console": "^3.0.0",
-    "purescript-test-unit": "^11.0.0"
+    "purescript-console": "^4.2.0",
+    "purescript-test-unit": "^14.0.0"
   }
 }
